Increase z-index of notification window. Fixes #52

--- a/templates/achievements/css/dev/notifications.less
+++ b/templates/achievements/css/dev/notifications.less
@@ -16,7 +16,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 200;
+	z-index: 99999;
 }
 
 #dpa-notifications {
@@ -28,7 +28,7 @@
 	position: fixed;
 	top: 18%;
 	width: 64%;
-	z-index: 300;
+	z-index: 999999;
 
 	.dpa-achievement-unlocked-thumbnail {	.border-radius(100rem);	}
 	> div { margin: @notificationsMarginV @notificationsMarginH; }
